--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-esbuild": "^6.1.1",
     "silentium-jsdom": "^0.0.1",
+    "silentium-web-api": "^0.0.9",
     "standard-version": "^9.5.0",
     "vitest": "^3.0.9"
   },
@@ -59,7 +60,6 @@
     }
   },
   "dependencies": {
-    "silentium": "^0.0.46",
-    "silentium-web-api": "^0.0.9"
+    "silentium": "^0.0.49"
   }
 }
