--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint-fix": "eslint src --fix",
     "test": "vitest run",
     "test:watch": "vitest watch",
-    "cz": "git add . && git cz",
+    "cz": "git cz",
     "push-head": "git push origin HEAD",
     "test-debug": "env DEBUG=app:* vitest",
     "release": "./beforeRelease.sh && npm run build && git add . && (git commit -m 'build: before release' || echo 'commit failed') && standard-version --no-verify && git push --follow-tags && npm publish",
@@ -60,6 +60,6 @@
     }
   },
   "dependencies": {
-    "silentium": "^0.0.53"
+    "silentium": "^0.0.56"
   }
 }
